[package]
name = "kv_store"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "fs"] }
hyper = { version = "1.3.1", features = ["full"] }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
byteorder = "1.5.0"
